feat(app): add board service and stuff
