# pkg/model/board_user.go
@@ -48,3 +48,32 @@ func (bu *BoardUser) Create(db *gorm.DB) error {
 
 	return nil
 }
+
+// Exists checks if a user with given id is assigned to a board
+func (bu *BoardUser) Exists(db *gorm.DB) error {
+	err := db.Model(bu).Where(bu).First(bu).Error
+	if err != nil {
+		if gorm.IsRecordNotFoundError(err) {
+			return ErrBoardUserNotFound
+		}
+
+		loggerFor("board_user").Warn().Err(err).Msg("unable to exec find board-user mapping query")
+		return ErrInternalServerError
+	}
+
+	return nil
+}
+
+// Delete deletes the receiver object from the database
+func (bu *BoardUser) Delete(db *gorm.DB) error {
+	err := db.Unscoped().Model(bu).
+		Where(&BoardUser{BoardID: bu.BoardID, UserID: bu.UserID}).
+		Delete(bu).Error
+
+	if err != nil {
+		loggerFor("board").Warn().Err(err).Msg("unable to exec delete query")
+		return ErrInternalServerError
+	}
+
+	return nil
+}
